Making until lesson 8

--- a/locallibrary/catalog/templates/index.html
+++ b/locallibrary/catalog/templates/index.html
@@ -23,4 +23,5 @@
         <li><strong>Genres: </strong>{{ num_genres }}</li>
         <li><strong>Author last name = Dawkins: </strong>{{ num_books_dawkins }}</li>
     </ul>
+    <p>You have visited this page {{ num_visits }} {% if num_visits == 1 %}time{% else %}times{% endif %}</p>
 {% endblock %}
