--- a/locallibrary/catalog/templates/base_generic.html
+++ b/locallibrary/catalog/templates/base_generic.html
@@ -23,11 +23,19 @@
                         <li><a href="{% url 'books' %}">All books</a></li>
                         <li><a href="{% url 'authors' %}">All authors</a></li>
                         {% if user.is_authenticated %}
+                            <hr>
                             <li>User: {{ user.get_username }}</li>
                             <li><a href="{% url 'my-borrowed' %}">My Borrowed</a></li>
                             <li><a href="{% url 'logout' %}?next={{ request.path }}">Logout</a></li>
                         {% else %}
                             <li><a href="{% url 'login' %}?next={{ request.path }}">Login</a></li>
+                        {% endif %}
+                        <hr>
+                        {% if user.is_staff %}
+                            <p>Staff</p>
+                            <a href="{% url 'all-borrowed' %}">All borrowed</a>
+                            <a href="{% url 'author-create' %}">Create User</a>
+                            <a href="{% url 'book-create' %}">Create Book</a>
                         {% endif %}
                     </ul>
                     {% endblock %}
