--- a/locallibrary/catalog/templates/catalog/author_list.html
+++ b/locallibrary/catalog/templates/catalog/author_list.html
@@ -7,6 +7,10 @@
             {% for author in author_list %}
             <li>
                 <a href="{{ author.get_absolute_url }}">{{ author }}</a>
+                {% if user.is_staff %}
+                    (<a href="{% url 'author-update' author.id %}" style="color: crimson">Update</a>)
+                    (<a href="{% url 'author-delete' author.id %}" style="color: crimson">Delete</a>)
+                {% endif %}
             </li>
             {% endfor %}
         </ul>
