--- a/locallibrary/catalog/templates/catalog/book_list.html
+++ b/locallibrary/catalog/templates/catalog/book_list.html
@@ -7,6 +7,10 @@
             {% for book in book_list %}
             <li>
                 <a href="{{ book.get_absolute_url }}">{{ book.title }}</a> ({{ book.author }})
+                {% if user.is_staff %}
+                    (<a href="{% url 'book-update' book.id %}" style="color: crimson">Update</a>)
+                    (<a href="{% url 'book-delete' book.id %}" style="color: crimson">Delete</a>)
+                {% endif %}
             </li>
             {% endfor %}
         </ul>
